{
    "appName": "Story Stains",
    "@appName": {
        "description": "The app name."
    },
    "user": "User",
    "@user": {
        "description": "User of the application."
    },
    "title": "Title",
    "@title": {
        "description": "Name of story."
    },
    "creator": "Creator",
    "@creator": {
        "description": "Creator of story."
    },
    "medium": "Medium",
    "@medium": {
        "description": "Type of publishing of story."
    },
    "creatorHint": "Creator Name",
    "@creatorHint": {
        "description": "Hint on writing a new creator."
    },
    "emotion": "Emotion",
    "@emotion": {
        "description": "A feeling."
    },
    "story": "Story",
    "@story": {
        "description": "A Story."
    },
    "emotions": "Emotions",
    "@emotions": {
        "description": "A number of feelings."
    },
    "notes": "Notes",
    "@notes": {
        "description": "Place to write notes."
    },
    "markdownNotes": "You can write Markdown notes here.",
    "@markdownNotes": {
        "description": "Hint for place to write notes."
    },
    "body": "Body",
    "@body": {
        "description": "Place to write body of a review."
    },
    "markdownBody": "You can write Markdown text here.",
    "@markdownBody": {
        "description": "Hint for the place to write body of a review."
    },
    "delete": "Delete",
    "@delete": {
        "description": "Remove something."
    },
    "ok": "OK",
    "@ok": {
        "description": "Confirm to do something."
    },
    "add": "Add",
    "@add": {
        "description": "Add an additional item."
    },
    "cancel": "Cancel",
    "@cancel": {
        "description": "Cancel doing something."
    },
    "refresh": "Refresh",
    "@refresh": {
        "description": "Reload something."
    },
    "modifiedDate": "Modified Date",
    "@modifiedDate": {
        "description": "Date when an object was last modified."
    },
    "username": "Username",
    "@username": {
        "description": "Name used for logging in."
    },
    "usernameHint": "Enter your username.",
    "@usernameHint": {
        "description": "Placeholder for where to enter username."
    },
    "password": "Password",
    "@password": {
        "description": "Name used for logging in."
    },
    "passwordHint": "Enter your secure password.",
    "@passwordHint": {
        "description": "Placeholder for where to enter password."
    },
    "review": "Review",
    "@review": {
        "description": "A review of some fictional media."
    },
    "pleaseTryAgain": "Please Try Again",
    "@pleaseTryAgain": {
        "description": "something went wrong, so command the user to try again politely."
    },
    "dataFetch": "Fetching data",
    "@dataFetch": {
        "description": "Fetching the data."
    },
    "noData": "No Data",
    "@noData": {
        "description": "No data was found."
    },
    "pageNotFound": "Page Not Found",
    "@pageNotFound": {
        "description": "Response for a 404 error."
    },
    "goBackHome": "Go Back Home",
    "@goBackHome": {
        "description": "Go back to home page."
    },
    "home": "Home",
    "@home": {
        "description": "Home page"
    },
    "search": "Search",
    "@search": {
        "description": "Search"
    },
    "myReviews": "My Reviews",
    "@myReviews": {
        "description": "My Reviews"
    },
    "reviewList": "Reviews",
    "@reviewList": {
        "description": "Title of list of reviews."
    },
    "blankStringError": "{string} can't be blank",
    "@blankStringError": {
        "description": "The mentioned string cannot be left blank",
        "placeholders": {
            "string": {
                "type": "String",
                "example": "Title"
            }
        }
    },
    "byCreator": "by {name}",
    "@byCreator": {
        "description": "Address who created the media.",
        "placeholders": {
            "name": {
                "type": "String",
                "example": "Frank Herbert"
            }
        }
    },
    "field": "{object} Field",
    "@field": {
        "description": "Editing field for object.",
        "placeholders": {
            "object": {
                "type": "String",
                "example": "Creator"
            }
        }
    },
    "positionPercentage": "{position}%",
    "@positionPercentage": {
        "description": "Position in the review where the emotion has been set.",
        "placeholders": {
            "position": {
                "type": "int",
                "example": "100"
            }
        }
    },
    "updatedObject": "Updated {object}",
    "@updatedObject": {
        "description": "The object has been changed.",
        "placeholders": {
            "object": {
                "type": "String",
                "example": "Review"
            }
        }
    },
    "deletedObject": "Deleted {object}",
    "@deletedObject": {
        "description": "The object has been deleted.",
        "placeholders": {
            "object": {
                "type": "String",
                "example": "User"
            }
        }
    },
    "deleteObject": "Delete {object}",
    "@deleteObject": {
        "description": "Action to delete object.",
        "placeholders": {
            "object": {
                "type": "String",
                "example": "User"
            }
        }
    },
    "logout": "Logout",
    "@logout": {
        "description": "Log out of account."
    },
    "login": "Login",
    "@login": {
        "description": "Sign in to account."
    },
    "signUp": "Sign up",
    "@signUp": {
        "description": "Sign up for an account."
    },
    "account": "User Account",
    "@account": {
        "description": "A users personal details and actions."
    },
    "or": "{a} or {b}",
    "@or": {
        "description": "Decide between two options.",
        "placeholders": {
            "a": {
                "type": "String",
                "example": "Sign in"
            },
            "b": {
                "type": "String",
                "example": "Sign up"
            }
        }
    },
    "choice": "{a}?",
    "@choice": {
        "description": "Swap to option a.",
        "placeholders": {
            "a": {
                "type": "String",
                "example": "Sign in"
            }
        }
    },
    "actionFailed": "{action} failed.",
    "@actionFailed": {
        "description": "Action failed.",
        "placeholders": {
            "action": {
                "type": "String",
                "example": "Delete user"
            }
        }
    },
    "actionSucceeded": "{action} succeeded.",
    "@actionSucceeded": {
        "description": "Action succeeded.",
        "placeholders": {
            "action": {
                "type": "String",
                "example": "Delete user"
            }
        }
    },
    "greeting": "Hello {user}",
    "@greeting": {
        "description": "Greeting to a fellow person.",
        "placeholders": {
            "user": {
                "type": "String",
                "example": "Fred"
            }
        }
    },
    "searchResults": "Search Results",
    "@searchResults": {
        "description": "Results from a search"
    },
    "withError": "{action} With Error: {error}",
    "@withError": {
        "description": "An action failed with particular error.",
        "placeholders": {
            "action": {
                "type": "String",
                "example": "Log in"
            },
            "error": {
                "type": "String",
                "example": "empty string"
            }
        }
    }
}